workspace/src/governance/00-vision-strategy/gatekeeper/constrainttemplate-vision.yaml
# OPA Gatekeeper ConstraintTemplate for Vision Statement
# Enforces governance policies at admission time
# Phase 3 - OPA Gatekeeper Integration

apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: governancevisionstatement

  annotations:

    gac-phase: "3-enforcement"

    description: "Validates VisionStatement resources"

spec:
  crd:

    spec:

      names:

        kind: GovernanceVisionStatement

      validation:

        openAPIV3Schema:

          type: object

          properties:

            requireEnglishTranslation:

              type: boolean

              description: "Require English translation for all text fields"

  targets:

    - target: admission.k8s.gatekeeper.sh

      rego: |

        package governancevisionstatement


        violation[{"msg": msg}] {

          input.review.kind.kind == "VisionStatement"

          not input.review.object.spec.vision

          msg := "VisionStatement must define spec.vision"

        }


        violation[{"msg": msg}] {

          input.review.kind.kind == "VisionStatement"

          not input.review.object.spec.mission

          msg := "VisionStatement must define spec.mission"

        }


        violation[{"msg": msg}] {

          input.review.kind.kind == "VisionStatement"

          count(input.review.object.spec.core_values) < 3

          msg := sprintf("Insufficient core values: %d (require at least 3)", [count(input.review.object.spec.core_values)])

        }


        violation[{"msg": msg}] {

          input.review.kind.kind == "VisionStatement"

          not input.review.object.metadata.annotations["strategic-doc-path"]

          msg := "VisionStatement must have 'strategic-doc-path' annotation for traceability"

        }
